# SIDQ

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  commitrules.md  continuation.md  pyproject.toml
configs/experiment/: baseline.yaml  smoke.yaml
docs/: architecture.md  baseline-reproduction.md  commitrules-compliance.md  competition-specification.md  system-paper-outline.md
notebooks/: SIDQ_Colab.ipynb
scripts/: build_colab_notebook.py  extract_shards.py  infer_sidq.py  run_track2_inference.py  standalone_inference.py  train_baseline.py  train_sidq.py
src/sidq/: __init__.py  cli.py  constants.py  reproducibility.py  types.py
src/sidq/audio/: __init__.py  io.py
src/sidq/augment/: __init__.py  base.py  codecs.py  curriculum.py  laundering.py  noise.py  pipeline.py  rawboost.py  rerecording.py  reverberation.py  telephony.py
src/sidq/aws/: __init__.py  config.py  polly.py  stress_loop.py  transcribe.py
src/sidq/data/: __init__.py  manifests.py  schemas.py  splitting.py  validation.py  webdataset.py
src/sidq/evaluation/: __init__.py  analysis.py  (+3 more)
starting_kit/: README.md
starting_kit/sample_submission/: track2_preds.csv
tests/regression/: test_score_direction.py  test_submission.py
tests/unit/: test_aasist.py  test_audio_io.py  test_augment_base.py  test_augmentations.py  test_aws.py  test_constants.py  test_curriculum.py  test_eer.py  test_fusion.py  test_inference.py  test_models.py  test_schemas.py  test_splitting.py  test_training.py  test_types.py  test_validation.py  test_webdataset.py  test_xlsr.py
(+25 files in other folders)
