[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidq"
version = "0.1.0"
description = "SIDQ-T2: Corruption-Aware Self-Supervised Fusion for Robust Arabic Speech Deepfake Detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mohammad Zoraiz", email = "zoraizmohammad@gmail.com" },
]

dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.30",
    "datasets>=2.14",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "soundfile>=0.12",
    "pydantic>=2.0",
    "omegaconf>=2.3",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.4",
]
aws = [
    "boto3>=1.28",
]
full = [
    "librosa>=0.10",
    "webdataset>=0.2",
    "mlflow>=2.7",
]

[project.scripts]
sidq = "sidq.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests requiring GPU",
    "aws: marks tests requiring AWS credentials",
]
